# obb_editor

./: .gitignore  CMakeLists.txt  README.md
h5build/: obb_editor.data  obb_editor.html  obb_editor.js  obb_editor.wasm
resources/: cat.vehicle_markers.json  obj_types.json  shell_minimal.html
resources/inline-scripts/: app.js  fs-helpers.js  keyboard-events.js  text-area.js
src/: fs_helper.cpp  fs_helper.h  main.cpp  marker.h  material.h  pv.cpp  pv.h  pwx.cpp  pwx.h  render_item.h  shaders.h  texture.cpp  texture.h  ui.cpp  ui.h
